--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lite-server": "^2.5.4",
