--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lite-server": "^2.5.4",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "sass": "^1.25.0"
   }
 }
