--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run lite",
+    "start": "npm run watch:all",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
+    "watch:scss": "onchange 'css/*.scss' -- npm run scss",
+    "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +20,9 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lite-server": "^2.5.4",
+    "node-sass": "^4.13.1",
+    "onchange": "^3.3.0",
+    "parallelshell": "^3.0.2",
     "popper.js": "^1.12.9",
     "sass": "^1.25.0"
   }
