--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "browser-sync": "^2.26.7",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2",
     "jquery": "^3.3.1",
     "lite-server": "^2.5.4",
     "node-sass": "^4.13.1",
