--- a/c2_frontend_w_react/confusion/package.json
+++ b/c2_frontend_w_react/confusion/package.json
@@ -12,9 +12,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-popper": "0.9.2",
+    "react-redux": "5",
+    "react-redux-form": "1.16",
     "react-router-dom": "4.2",
     "react-scripts": "3.3.1",
-    "reactstrap": "5.0.0"
+    "reactstrap": "5.0.0",
+    "redux": "3.7"
   },
   "scripts": {
     "start": "react-scripts start",
