--- a/c2_frontend_w_react/confusion/package.json
+++ b/c2_frontend_w_react/confusion/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.0.0",
     "bootstrap-social": "5.1",
+    "eslint": "^7.30.0",
+    "eslint-plugin-import": "^2.23.4",
     "font-awesome": "4.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
