--- a/c2_frontend_w_react/confusion/package.json
+++ b/c2_frontend_w_react/confusion/package.json
@@ -8,8 +8,6 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.0.0",
     "bootstrap-social": "5.1",
-    "eslint": "^7.30.0",
-    "eslint-plugin-import": "^2.23.4",
     "font-awesome": "4.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -17,7 +15,7 @@
     "react-redux": "5",
     "react-redux-form": "1.16",
     "react-router-dom": "4.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.1",
     "reactstrap": "5.0.0",
     "redux": "3.7",
     "redux-logger": "^3.0.6",
